# cnn.c

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
include/: blas.h  dataloader.h  gemm.h  list.h  matrix.h  utils.h
src/: blas.c  dataloader.c  gemm.c  list.c  main.c  matrix.c  utils.c
